--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,15 +5,8 @@
     <th>Product
     <th>Price
     <th>Customer</th>  
-  </tr>
-  <% @orders.each do |order| %>
-    <% order.products.each do |product| %>
-      <tr>
-        <td><%= order.id %></td>
-        <td><%= product.name %></td>
-        <td><%= product.price %></td>
-        <td><%= order.customer.name %></td>
-      </tr>
-    <% end %>
-  <% end %>
+  
+      <%= render(@orders) || "There are No Orders!" %>
+     
+   
 </table>
